--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,192 @@
 #root {
   width: 100%;
-}
-
-.list-wrap ul {
-  width: 100%;
   padding: 40px;
-  border: 1px solid #000;
+  position: relative;
 }
-.list-wrap ul li {
+* {
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: 8px;
+}
+select, input {
+  border: 1px solid #afafaf;
+}
+button {
+  cursor: pointer;
+}
+h2 {
+  margin-bottom: 12px;
+  font-size: 16px;
+  color: #2f2f2f;
+}
+.home {
+  border: 1px solid #000;
+  padding: 20px;
+}
+.home .txt-wrap {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #efefef;
+  padding: 12px 40px;
+}
+.home .txt-wrap .total {
+  font-size: 24px;
+  font-weight: 700;
+}
+.home .view-wrap .select-wrap {
+  width: fit-content;
+}
+.home .view-wrap .select-wrap select {
+  padding: 4px 16px 4px 4px;
+}
+.home .view-wrap .select-wrap select:not(:first-of-type) {
+  margin-left: 4px;
+}
+.home .view-wrap .in-out-wrap ul {
+  margin-top: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.list-wrap ul li .date-wrap {
+.home .view-wrap .in-out-wrap ul li {
+  border: 1px solid #000;
+  width: calc(50% - 4px);
+  padding: 20px;
+  text-align: center;
+}
+.home .view-wrap .in-out-wrap ul li.in .total {
+  color: blue;
+}
+.home .view-wrap .in-out-wrap ul li.out .total {
+  color: red;
+}
+.home .add-btn {
+  width: 100%;
+  padding: 12px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+}
+
+.list {
+  margin-top: 20px;
+}
+.list .list-wrap {
+  height: 110px;
+  padding: 20px 40px;
+  border: 1px solid #000;
+  overflow-y: auto;
+}
+.list .list-wrap ul {
+  width: 100%;
+}
+.list .list-wrap ul:not(:first-of-type) {
+  margin-top: 8px;
+  padding-top: 8px;
+  border-top: 1px solid #efefef;
+}
+.list .list-wrap ul li {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.list .list-wrap ul li:not(:first-of-type) {
+  margin-top: 8px;
+  padding-top: 8px;
+  border-top: 1px solid #efefef;
+}
+.list .list-wrap ul li .date-wrap {
+  display: flex;
+  align-items: center;
+}
+.list .list-wrap ul li .date-wrap .date {
+  margin-right: 8px;
+  color: #afafaf;
+}
+.list .list-wrap ul li .amount.in {
+  color: blue;
+}
+.list .list-wrap ul li .amount.out {
+  color: red;
+}
+
+.chart {
+  width: 100%;
+  height: 400px;
+  margin-top: 40px;
+  margin-bottom: 75px;
+}
+.chart > div {
+  border: 1px solid #000;
+}
+.insert {
+  width: 400px;
+  padding: 20px;
+  position: absolute;
+  margin-top: 20px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 12px;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 999;
+  transition: all 0.3s;
+}
+.insert.on {
+  opacity: 1;
+  visibility: visible;
+  margin-top: 0;
+}
+.insert ul {
+  margin-bottom: 12px;
+}
+.insert ul li:not(.radio-wrap) {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+.insert ul li:not(:first-of-type) {
+  margin-top: 12px;
+}
+.insert ul li:not(.radio-wrap) label {
+  margin-bottom: 8px;
+}
+.insert ul li input {
+  width: 100%;
+  padding: 8px 12px;
+}
+.insert ul .radio-wrap {
+  display: flex;
+  align-items: center;
+}
+.insert ul .radio-wrap .radio {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
+.insert ul .radio-wrap .radio:not(:first-of-type) {
+  margin-left: 12px;
+}
+.insert .btn-wrap {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.insert .btn-wrap button {
+  width: calc(50% - 4px);
+  padding: 8px 12px;
+}
+.insert .btn-wrap .add-info {
+  background-color: #000;
+  color: #fff;
 }
